--- a/venue.html
+++ b/venue.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet"  href="style1.css">
 </head>
 <body>
-    <span class="one">Wednesday</span>
+    <span class="one">
+        Wednesday<br/><br/>
+        <span style="color:darkgoldenrod;">16th November</span><br/><br/>
+        9:30pm onwards<br/><br/>
+        <span style="color:darkgoldenrod;">Radisson Blue,<br/><br/>
+        Egmore
+        </span>
+    <!-- <span class="one">Wednesday</span>
     <span class="two">16th November</span>
     <span class="three">9:30pm onwards</span>
     <span class="four">Radisson Blue,</span>
-    <span class="five">Egmore</span>
+    <span class="five">Egmore</span>  -->
 </body>
 </html>
