--- a/info.html
+++ b/info.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet"  href="style.css">
 </head>
 <body>
-    <span class="one">JOIN US IN CELEBRATING OUR</span>
+    <span class="one">
+        JOIN US IN CELEBRATING OUR<br/><br/><br/>
+        <span style="color:darkgoldenrod;">25th </span><br/><br/><br/>
+        WEDDING ANNIVERSARY<br/><br/><br/>
+        <span style="color:darkgoldenrod;">MINAL </span> & <br/><br/><br/>
+        <span style="color:darkgoldenrod;">RAJESH</span>
+    </span>
+    <!-- <span class="one">JOIN US IN CELEBRATING OUR</span>
     <span class="two">25th </span>
     <span class="three"> WEDDING ANNIVERSARY</span>
     <span class="four"><span style="color:darkgoldenrod;">MINAL </span> & </span>
-    <span class="five">RAJESH</span>
+    <span class="five">RAJESH</span> -->
 
-    <script src="info.js"></script>
+    <!-- <script src="info.js"></script> -->
 </body>
 </html>
