--- a/info.html
+++ b/info.html
@@ -21,6 +21,6 @@
     <span class="four"><span style="color:darkgoldenrod;">MINAL </span> & </span>
     <span class="five">RAJESH</span> -->
 
-    <!-- <script src="info.js"></script> -->
+    <script src="info.js"></script>
 </body>
 </html>
